# letterboxd_stats

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  sql_debug.py
config/: __init__.py
letterboxd_stats/: __init__.py  cli copy.py  cli.py  data.py  export_handler.py  letterboxd_connector.py  main.py  requirements.txt  tmdb.py  tmdb_connector.py  web_scraper.py
letterboxd_stats/cli/: __init__.py  argument_parser.py  commands.py  config_loader.py  export_viewer.py  letterboxd_cli.py  renderer.py  tmdb_api.py  user_input_handler.py
letterboxd_stats/core/: __init__.py  config_loader.py  export_handler.py  letterboxd_connector.py  render.py  tmdb_cache.py  tmdb_connector.py
letterboxd_stats/lb/: __init__.py  auth.py  auth_connector.py  data_exporter.py  general_cache.py  public_connector.py  utilities.py
letterboxd_stats/tests/: test_tmdb_api.py
letterboxd_stats/utils/: __init__.py  config_loader.py  general_cache.py  render.py  renderer.py  tmdb_api.py  tmdb_connector.py
tests/: test_tmdb_api.py
