[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd_stats"
version = "0.0.1"
authors = [{ name = "mBaratta96" }]
description = "A small example package"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "ascii_magic~=2.3.0",
  "inquirerpy~=0.3.4",
  "lxml~=4.9.0",
  "pandas~=1.5.1",
  "platformdirs~=3.0.0",
  "rich~=12.6.0",
  "tmdbv3api~=1.7.7",
  "tomli~=2.0.1",
]

[project.urls]
"Homepage" = "https://github.com/mBaratta96/letterboxd_stats"
"Bug Tracker" = "https://github.com/mBaratta96/letterboxd_stats/issues"

[project.scripts]
letterboxd_stats = "letterboxd_stats.main:main"
