[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd_stats"
version = "0.3.0"
authors = [
    { name = "mBaratta96" },
    { name = "TreySu" }
    ]
description = "Get information about your Letterboxd activity."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ascii_magic~=2.3.0",
    "inquirerpy~=0.3.4",
    "lxml~=4.9.0",
    "pandas~=2.2.3",
    "pandarallel~=1.6.5",
    "platformdirs~=3.0.0",
    "requests~=2.31.0",
    "rich~=13.3.5",
    "tmdbv3api~=1.7.7",
    "tomli~=2.0.1",
    "tqdm~=4.65.0"
]

[project.urls]
"Homepage" = "https://github.com/mBaratta96/letterboxd_stats"
"Bug Tracker" = "https://github.com/mBaratta96/letterboxd_stats/issues"

[project.scripts]
letterboxd_stats = "letterboxd_stats.main:main"
